Disable bg fixed on iphone

--- a/views/scss/app.scss
+++ b/views/scss/app.scss
@@ -219,7 +219,7 @@ body {
   }
 }
 .mobility { 
-  background: url(/images/mobility.png) top center no-repeat;
+  background: url(/images/mobility.png) top center no-repeat fixed;
   background-size: cover;
   height: 648px;
   margin-top: 75px;
@@ -230,7 +230,7 @@ body {
   }
 }
 .context { 
-  background: url(/images/context.png) top center no-repeat;
+  background: url(/images/context.png) top center no-repeat fixed;
   background-size: cover;
   height: 814px;
   min-width: 950px;
@@ -242,7 +242,7 @@ body {
   }
 }
 .social { 
-  background: url(/images/social.png) top center no-repeat;
+  background: url(/images/social.png) top center no-repeat fixed;
   background-size: cover;
   height: 811px;
   min-width: 950px;
@@ -254,7 +254,7 @@ body {
   }
 }
 .collaboration { 
-  background: url(/images/collaboration.png) top center no-repeat;
+  background: url(/images/collaboration.png) top center no-repeat fixed;
   background-size: cover;
   height: 790px;
   min-width: 950px;
@@ -269,7 +269,7 @@ body {
   }
 }
 .optimized{ 
-  background: url(/images/optimized.png) top center no-repeat;
+  background: url(/images/optimized.png) top center no-repeat fixed;
   background-size: cover;
   height: 810px;
   min-width: 950px;
@@ -281,7 +281,7 @@ body {
   }
 }
 .cloud{ 
-  background: url(/images/cloud.png) top center no-repeat;
+  background: url(/images/cloud.png) top center no-repeat fixed;
   background-size: cover;
   height: 808px;
   min-width: 950px;
@@ -293,7 +293,7 @@ body {
   }
 }
 .time{ 
-  background: url(/images/time.png) top center no-repeat;
+  background: url(/images/time.png) top center no-repeat fixed;
   background-size: cover;
   height: 1001px;
   min-width: 950px;
@@ -364,7 +364,9 @@ body {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
+  .mobility, .context, .social, .collaboration, .optimized, .cloud, .time { 
+    background-attachment: scroll;
+  }
 }
 
 /***** CONTENT CSS ******/
